# DEM

./: .gitignore  CMakeLists.txt  DEM.f90  DEM_PARALLEL.sln  DEM_PARALLEL.vfproj  README.md
MATLA_File/: ACELERATION.m  CONSTIT.m  DISPLECEMENT.m  ENERGY.m  FORCE.m  FORCE_DISPLACEMENT.m  MODEL_POLOS.m  STRESS.m  readfileDEM.m
SubRUTINES/: VARIABLES_DATA.f90  VARIABLES_DEM.f90
SubRUTINES/CONSTITS/: CONSTIT_BI.f90  CONSTIT_BI_SHEAR.f90  CONSTIT_EXP.f90  CONSTIT_LIN.f90  CONSTIT_TRI.f90  CONSTIT_TRI_.f90
SubRUTINES/FUNCTION/: GAMA.f90  SPECTRALGFR.f90  SPECTRALROH.f90  SPECTRALYNG.f90
SubRUTINES/PRINCIPAL/: BOUND.f90  CABAR.f90  CALAUX.f90  CALCOEV.f90  CALOAD.f90  CONECTI.f90  COORD.f90  CREATENBSYM.f90  EDITGEOM.f90  ENERG.f90  IMPERF.f90  INTEGRATION.f90  LOAD.f90  NAYFES3.f90  NAYFES8.f90  NODMASS.f90  PREPVAR.f90  READAT.f90  RMEC.f90  STATISTICS.f90  WINDOWS.f90
SubRUTINES/RANDOMNESS/: CAMPOROH.f90  INIROH.f90
SubRUTINES/SUBRUTINES/: APPLYSYM.f90  COORDSUB.f90  DIACO1.f90  DOMINF.f90  EXTCO1.f90  FPROB.f90  INTCO1.f90  INTPOLO.f90  PRISMEDITGEOM.f90  RANDMEC.f90  RESIZESYM.f90  RMECIN.f90  SIZEPOLO.f90  UBARPOLO.f90
SubRUTINES/WRITEFILES/: ANSYS.f90  ANSYSFEM.f90  ANSYSMASTER.f90  ANSYSSLAVE.f90  CLEARFILE.f90  CLOSE_FILES.f90  DOMINF.f90  MODEL.f90  OPEN_FILES.f90  OPEN_MODEL.f90  PARAVIEW.f90  WRIACEL.f90  WRIBARDAMAGED.f90  WRICONTR.f90  WRIENE.f90  WRIFORCE.f90  WRIPOS.f90  WRITEN.f90
src/: DEM.f90  VARIABLES.txt  VARIABLES_DATA.f90  VARIABLES_DEM.f90  run.sh
src/constits/: CONSTIT_BI.f90  CONSTIT_BI_SHEAR.f90  (+3 more)
vstudio/: DEM.vfproj
(+66 files in other folders)
